--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 <body>
 <header>
   <div id="logo">
-	<img src="img/logo.png" alt="Trippy Divers logo" width="250">
+	<img src="img/logo.png" alt="Trippy Divers logo" width="250" height="145">
   </div>
   <div id="email">
 	<div id="social_networks">
