--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <script src="js/form.js"></script>
   <script src='https://www.google.com/recaptcha/api.js?render=6LgjH2m5c8emE66pjdExmgep47BAdKTrCJ7KC1_W'></script>
 
-  <title>Trippy Trekkers</title>
+  <title>Trippy Divers</title>
 </head>
 <body>
 <header>
